[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameLogic.gd" type="Script" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://white_circle.png" type="Texture" id=3]
[ext_resource path="res://border_gradient.png" type="Texture" id=4]
[ext_resource path="res://kiai_emit.png" type="Texture" id=5]
[ext_resource path="res://particles/kiai_emit.tres" type="Material" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SizeNor:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SizeNor:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 400, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SizeNor:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhiteCircle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../LeftGradient:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.466667, 0.807843, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../RightGradient:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.466667, 0.807843, 1, 0.498039 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "bump"
length = 4.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SizeNor:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 2, 2.1, 3, 3.1, 4, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteCircle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 3.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "on_bump"
}, {
"args": [  ],
"method": "on_bump"
}, {
"args": [  ],
"method": "on_bump"
}, {
"args": [  ],
"method": "on_bump"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../LeftGradient:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3, 3.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.466667, 0.807843, 1, 0 ), Color( 0.466667, 0.807843, 1, 0.498039 ), Color( 0.466667, 0.807843, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../RightGradient:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3, 3.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.466667, 0.807843, 1, 0 ), Color( 0.466667, 0.807843, 1, 0.498039 ), Color( 0.466667, 0.807843, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "bump_kiai"
tracks/0/type = "value"
tracks/0/path = NodePath("SizeNor:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteCircle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "startup"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( -100, -100, 0 )
gravity = Vector3( 0, 200, 0 )
initial_velocity = 800.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 5.0
damping = 1.0
angle = 50.0
angle_random = 0.5
scale = 0.5
scale_random = 0.5

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.00598145
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimPlay" type="AnimationPlayer" parent="."]
root_node = NodePath("../Logo")
playback_speed = 1.34
anims/RESET = SubResource( 2 )
anims/bump = SubResource( 1 )
anims/bump_kiai = SubResource( 3 )

[node name="StartupAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/startup = SubResource( 5 )

[node name="LeftGradient" type="TextureRect" parent="."]
modulate = Color( 0.466667, 0.807843, 1, 1 )
anchor_bottom = 1.0
margin_right = 156.0
margin_bottom = 0.00598145
texture = ExtResource( 4 )
expand = true

[node name="RightGradient" type="TextureRect" parent="."]
modulate = Color( 0.466667, 0.807843, 1, 0.498039 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -157.0
margin_right = -1.0
margin_bottom = 0.00598145
texture = ExtResource( 4 )
expand = true
flip_h = true

[node name="SelectSong" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 150.0
margin_bottom = 28.0
text = "SELECT DA SONG"

[node name="Logo" type="Control" parent="."]
anchor_left = 0.3
anchor_top = 0.158
anchor_right = 0.696
anchor_bottom = 0.835
margin_left = -0.200012
margin_top = 0.200943
margin_right = -5.70404
margin_bottom = -5.99503

[node name="Visualizers" type="Control" parent="Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )

[node name="VisualizerContainer" type="Control" parent="Logo/Visualizers"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )

[node name="SizeNor" type="TextureRect" parent="Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="SizeInv" type="TextureRect" parent="Logo"]
modulate = Color( 1, 1, 1, 0.329412 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="WhiteCircle" type="TextureRect" parent="Logo"]
modulate = Color( 1, 1, 1, 0.196078 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )
texture = ExtResource( 3 )
expand = true

[node name="Emit1" type="Control" parent="."]
anchor_left = -0.002
anchor_top = 0.997
anchor_right = -0.002
anchor_bottom = 0.997
margin_left = -19.952
margin_top = -20.194
margin_right = 20.048
margin_bottom = 19.806

[node name="Emit1" type="Particles2D" parent="Emit1"]
position = Vector2( 20, 21 )
emitting = false
amount = 50
lifetime = 8.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 5 )

[node name="Emit2" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.998
anchor_right = 1.0
anchor_bottom = 0.998
margin_left = -20.0
margin_top = -19.7941
margin_right = 20.0
margin_bottom = 20.2059

[node name="Emit2" type="Particles2D" parent="Emit2"]
position = Vector2( 21, 20 )
emitting = false
amount = 50
lifetime = 8.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 4 )
texture = ExtResource( 5 )

[connection signal="pressed" from="SelectSong" to="." method="_on_SelectSong_pressed"]
